--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <link rel="stylesheet" href="/style/footer.css">
         <link rel="stylesheet" href="/style/contact.css">
         <link rel="stylesheet" href="/style/global.css">
+        <link rel="stylesheet" href="/style/projects.css">
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
         <link
@@ -60,32 +61,66 @@
                 <div class="skillList">
                     <div class="skillItem">
                         <div class="skillIcon">
-                            <img src="" alt="html" />
+                            <img src="/images/html5.svg" alt="html" />
                         </div>
                         <p>HTML5</p>
                     </div>
                     <div class="skillItem">
                         <div class="skillIcon">
-                            <img src="" alt="css" />
+                            <p style="color: white; font-size:2rem;">CSS</p>
                         </div>
                         <p>CSS</p>
                     </div>
                     <div class="skillItem">
                         <div class="skillIcon">
-                            <img src="" alt="github" />
+                            <img src="/images/github.svg" alt="github" />
                         </div>
                         <p>GitHub</p>
                     </div>
                 </div>
             </div>
-            <div id="projects">
-                <h3 class="sectionTitle">My Projects</h3>
-                <div class="projectsGrid"></div>
-                <div class="projectsGrid"></div>
-                <div class="projectsGrid"></div>
-                <div class="projectsGrid"></div>
-                <div class="projectsGrid"></div>
+
+        <div id="projects" class="projects_container">
+            <h2 class="section_title">MY PROJECTS</h2>
+            <div class="projects_grid">
+                <div class="project_grid_item shadow">
+                    <img src="images/facebook.png"/>
+                    <div class="project_title">
+                        <p>Facebook UI</p>
+                    </div>
+                </div>
+                <div class="project_grid_item shadow">
+                    <img src="images/twitter.png"/>
+                    <div class="project_title">
+                        <p>Twitter Clone</p>
+                    </div>
+                </div>
+                <div class="project_grid_item shadow">
+                    <img src="images/github.jpg"/>
+                    <div class="project_title">
+                        <p>GitHub</p>
+                    </div>
+                </div>
+                <div class="project_grid_item shadow">
+                    <img src="images/tesla.jpg"/>
+                    <div class="project_title">
+                        <p>Car Marketplace</p>
+                    </div>
+                </div>
+                <div class="project_grid_item shadow">
+                    <img src="images/news.jpg"/>
+                    <div class="project_title">
+                        <p>News Site</p>
+                    </div>
+                </div>
+                <div class="project_grid_item shadow">
+                    <img src="images/blog.jpg"/>
+                    <div class="project_title">
+                        <p>Tech Blog</p>
+                    </div>
+                </div>
             </div>
+        </div>
             <div id="contacts">
                 <h3 class="sectionTitle">Contact</h3>
                 <div class="formContainer">
