--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
             </div>
 
         <div id="projects" class="projects_container">
-            <h2 class="section_title">MY PROJECTS</h2>
+            <h3 class="sectionTitle">MY PROJECTS</h3>
             <div class="projects_grid">
                 <div class="project_grid_item shadow">
                     <img src="images/facebook.png"/>
