--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 </div>
             </div>
             <div id="skills">
-                <h3 class="sectionTitle">My Skills</h3>
+                <h3 class="sectionTitle">MY SKILLS</h3>
                 <div class="skillList">
                     <div class="skillItem">
                         <div class="skillIcon">
@@ -122,7 +122,7 @@
             </div>
         </div>
             <div id="contacts">
-                <h3 class="sectionTitle">Contact</h3>
+                <h3 class="sectionTitle">CONTACT</h3>
                 <div class="formContainer">
                     <form action="contact.html" method="get">
                         <label for="name">Your Name :</label>
