--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                 </div>
             </div>
         </div>
-            <div id="contacts">
+            <div id="contact">
                 <h3 class="sectionTitle">CONTACT</h3>
                 <div class="formContainer">
                     <form action="contact.html" method="get">
