--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                     <p>
                         Hello, I am Ankit Adhikari. I am a web developer from
                         Nepal. I have been designing and developing websites for
-                        7 days. I have a little knowlwdge about HTML and CSS. I
+                        a year. I have a little knowlwdge about HTML, CSS and Javascript. I
                         can also deploy the website in GitHub.
                     </p>
                 </div>
